# MaxKB

./: .editorconfig  LOCAL_DEV_GUIDE.md  MAXKB_GO_INTEGRATION_EXAMPLE.md  MAXKB_INTERFACE_AUDIT.md  MAXKB_THIRD_PARTY_INTEGRATION.md  docker-compose.yml  main.py  pyproject.toml  run_local_all.sh  run_local_dev.sh  run_local_docker.sh  test_maxkb_end_to_end.py  test_maxkb_local_smoke.py  test_maxkb_third_party_e2e.py  test_open_chat.sh  todo.md
.github/workflows/: build-and-push-python-pg.yml  build-and-push-vector-model.yml  build-and-push.yml
apps/application/: urls.py
apps/application/api/: application_api.py  application_chat_link.py
apps/application/flow/: common.py  i_step_node.py  knowledge_loop_workflow_manage.py  knowledge_workflow_manage.py  loop_workflow_manage.py  tool_loop_workflow_manage.py  tool_workflow_manage.py  tools.py  workflow_manage.py
apps/application/migrations/: 0010_chatsharelink.py  0011_application_skill_tool_ids.py  0012_remove_applicationapikey_user.py
apps/application/models/: application.py  application_api_key.py  application_chat.py
apps/application/serializers/: application.py  application_api_key.py  application_chat.py  application_chat_link.py  common.py
apps/application/sql/: list_application_chat_ee.sql
apps/application/views/: __init__.py  application.py  application_api_key.py  application_chat_link.py
apps/chat/: urls.py
apps/chat/mcp/: tools.py
apps/chat/serializers/: chat.py  chat_authentication.py
apps/chat/views/: chat.py
apps/common/auth/: authentication.py
apps/common/constants/: cache_version.py  permission_constants.py
apps/common/job/: clean_chat_job.py
apps/common/middleware/: chat_headers_middleware.py
apps/common/utils/: chat_link_code.py  shared_resource_auth.py  split_model.py  tool_code.py
apps/folders/serializers/: folder.py
apps/knowledge/: urls.py
apps/knowledge/api/: knowledge.py  tag.py  (+1 more)
apps/maxkb/: const.py
apps/models_provider/: base_model_provider.py
apps/open_api/: apps.py  auth.py  serializers.py  services.py  urls.py  urls_v1.py
apps/tools/: urls.py
installer/: Dockerfile  Dockerfile-base  nginx.conf  sandbox.c  start-maxkb.sh  start-with-nginx.sh
react-portal/: index.html  package-lock.json  package.json
react-portal/src/: App.tsx  api.ts  styles.css
ui/: package.json  vite.config.ts
ui/src/: App.vue  chat.ts  main.ts
(+487 files in other folders)
