[project]
name = "maxkb"
version = "2.0.0"
description = "强大易用的开源企业级智能体平台"
authors = [{ name = "shaohuzhang1", email = "shaohu.zhang@fit2cloud.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "django==5.2.11",
    "drf-spectacular[sidecar]==0.28.0",
    "django-redis==6.0.0",
    "django-db-connection-pool==1.2.6",
    "django-mptt==0.17.0",
    "psycopg[binary]==3.2.9",
    "python-dotenv==1.1.1",
    "uuid-utils==0.14.0",
    "captcha==0.7.1",
    "pytz==2025.2",
    "psutil==7.0.0",
    "cffi==1.17.1",
    "beautifulsoup4==4.13.4",
    "jieba==0.42.1",
    "langchain==1.2.10",
    "langchain-openai==1.1.10",
    "langchain-anthropic==1.3.3",
    "langchain-community==0.4.1",
    "langchain-deepseek==1.0.1",
    "langchain-google-genai==4.2.1",
    "langchain-mcp-adapters==0.2.1",
    "langchain-huggingface==1.2.0",
    "langchain-ollama==1.0.1",
    "langchain-aws==1.3.0",
    "langgraph==1.0.8",
    "deepagents==0.4.3",
    "torch==2.8.0",
    "sentence-transformers==5.0.0",
    "qianfan==0.4.12.3",
    "zhipuai==2.1.5.20250708",
    "volcengine-python-sdk[ark]==4.0.5",
    "boto3==1.42.46",
    "tencentcloud-sdk-python==3.0.1420",
    "xinference-client==1.7.1.post1",
    "anthropic==0.79.0",
    "dashscope==1.25.7",
    "celery[sqlalchemy]==5.5.3",
    "django-celery-beat==2.8.1",
    "celery-once==3.0.1",
    "django-apscheduler==0.7.0",
    "html2text==2025.4.15",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "pymupdf==1.26.3",
    "pypdf==6.7.2",
    "pydub==0.25.1",
    "pysilk==0.0.1",
    "gunicorn==23.0.0",
    "python-daemon==3.1.2",
    "websockets==15.0.1",
    "pylint==3.3.7",
    "cohere==5.17.0",
    "jsonpath-ng==1.7.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "macpytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
    { index = "pytorch", marker = "sys_platform == 'win'" },
    { index = "macpytorch", marker = "sys_platform == 'darwin'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"